--- a/client/src/common/style/main.scss
+++ b/client/src/common/style/main.scss
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;600;700&display=swap");
 @import "../style/color.scss";
 * {
   border: 0;
@@ -8,6 +9,7 @@ html,
 body {
   font-size: 62.5%;
   overflow-x: hidden;
+  font-family: "Rubik", sans-serif;
 }
 h1,
 h2,
@@ -60,6 +62,7 @@ textarea {
 }
 .loadingBar {
   display: flex;
+  
   font-size: 1.4rem;
   font-weight: 400;
   letter-spacing: 1.2px;
