--- a/client/src/common/style/rwd.scss
+++ b/client/src/common/style/rwd.scss
@@ -111,8 +111,10 @@
             overflow: hidden;
             border-radius: 50%;
             width: 2.5rem;
+            height: 2.5rem;
             img {
               width: 100%;
+              height: 100%;
             }
           }
           span {
@@ -132,6 +134,7 @@
         top: 0;
         opacity: 1;
         transition: opacity 0.3s;
+        overflow-x: hidden;
         z-index: 999;
         .mobile--search-closeBtn {
           display: flex;
@@ -186,6 +189,18 @@
         opacity: 0;
       }
     }
+    .article--list-container {
+      .content-container {
+        .content-main {
+          h1 {
+            &:hover {
+              font-size: 2.5rem;
+              text-shadow: none;
+            }
+          }
+        }
+      }
+    }
   }
 }
 //965
@@ -237,7 +252,12 @@
     }
   }
 }
-
+//570
+@media (max-width: 35.625rem) {
+  html {
+    font-size: 46%;
+  }
+}
 //740
 @media (max-width: 46.25rem) {
   .main-container {
@@ -252,13 +272,12 @@
   }
 }
 
-//445
-@media (max-width: 27.8rem) {
+//450
+@media (max-width: 28.125rem) {
   html {
     font-size: 43%;
   }
   .left-container {
-    padding: 0 1rem;
   }
 }
 //535
