fix rwd searchBar

--- a/client/src/common/style/rwd.scss
+++ b/client/src/common/style/rwd.scss
@@ -44,6 +44,7 @@
 
       .btn-mobile-nav {
         display: flex;
+
         .n-icon {
           font-size: 5rem;
           color: $primary-light;
@@ -76,6 +77,7 @@
         .search-container {
           position: relative;
           transition: opacity 0.3s;
+
           input {
             display: inline-block;
             border-radius: 3px 0 0 3px;
@@ -127,15 +129,15 @@
       }
       .mobile--searchBar {
         background-color: $primary-color;
-        width: 100%;
+        width: 100vw;
         height: 85vh;
-        position: absolute;
+        position: fixed;
         left: 0;
         top: 0;
         opacity: 1;
         transition: opacity 0.3s;
-        overflow-x: hidden;
         z-index: 999;
+
         .mobile--search-closeBtn {
           display: flex;
           align-items: center;
@@ -184,9 +186,12 @@
         padding-top: 3rem;
       }
       .close-mobileSearch {
-        position: absolute;
+        position: fixed;
         top: 10rem;
         opacity: 0;
+      }
+      .close--mobile--tags {
+        display: none;
       }
     }
     .article--list-container {
