2023/10/11 update reply fix Css

--- a/client/src/common/style/color.scss
+++ b/client/src/common/style/color.scss
@@ -9,6 +9,9 @@ $font-black: #1f2937;
 $font-gray: #6b7280;
 $font-black-gray: #4b5563;
 
+$reply-bgc: #d1d5db;
+$reply-text: #f3f4f6;
+
 $mobileBar-color: #0285c7da;
 $fouce-color: #075985;
 $error-msg: #ef4444;
